Fixed search bar persisting when pressing a result, fixed overflow when hovering

--- a/src/components/search.css
+++ b/src/components/search.css
@@ -46,6 +46,7 @@ input {
     margin-top: 0.5rem;
     margin-left: 1rem;
     margin-right: 1rem;
+    overflow: hidden;
 }
 
 .hidden {
